# Changes from Version 1.4.9 to 1.5.0 [9 September 2018] #

Fix issues with NAs in parameters.
Fix missing arguments in autojags().
Handle errors in output processing so that samples are not lost completely.
Make sure a specified random seed is used for initial value functions.
Fix error where summary stats were printed in the wrong order for some parameters.
Don't collapse 1 row/1col matrices into vectors automatically.

# Changes from Version 1.4.8 to 1.4.9 [8 December 2017] #

Fix bug with DIC output introduced in 1.4.7.

# Changes from Version 1.4.7 to 1.4.8 [17-November 2017] #

Minor changes to prep for CRAN submission.

# Changes from Version 1.4.5 to 1.4.7 [17-August-2017] #

Fix more issues with random seeds and problems with DIC.

# Changes from Version 1.4.5 to 1.4.6 [26-May-2017] #

Fix issue with setting seed affecting other random number generation.

# Changes from Version 1.4.4 to 1.4.5 [8-Feb-2017] #

Allow turning deviance/DIC monitoring on/off when updating an existing model. Overhaul handling of adaptation; default to running a sequence of adapt() calls until JAGS reports adapation is adequate. Suggest minimum of 1000 adaptation iterations otherwise in man pages. Change output of summary function. Add ability to control factories.

# Changes from Version 1.4.3 to 1.4.4 [10-Nov-2016] #

Change default approach to generating random seeds. Add S3 method for View() and convert traceplot() to an S3 method from S4.

# Changes from Version 1.4.2 to 1.4.3 [15-Sept-2016] #

Fix to allow running in parallel when dependencies are in non-standard libraries. Fix bug when updating jagsbasic class.

# Changes from Version 1.4.1 to 1.4.2 [21-Feb-2016] #

Changes to NAMESPACE to get clean build check on R-devel.

# Changes from Version 1.4.0 to 1.4.1 [20-Feb-2016] #

Add ability to specify number of CPU cores to use when running in parallel.

# Changes from Version 1.3.9 to 1.4.0 [10-Feb-2016] #
