@@ -1,6 +1,6 @@
 Package: jagsUI
-Version: 1.5.0.9000
-Date: 2019-07-26
+Version: 1.5.1
+Date: 2019-07-30
 Title: A Wrapper Around 'rjags' to Streamline 'JAGS' Analyses
 Author: Ken Kellner <contact@kenkellner.com>
 Maintainer: Ken Kellner <contact@kenkellner.com>
@@ -17,6 +17,6 @@ Imports:
     utils
 SystemRequirements: JAGS (http://mcmc-jags.sourceforge.net)
 Description: A set of wrappers around 'rjags' functions to run Bayesian analyses in 'JAGS' (specifically, via 'libjags').  A single function call can control adaptive, burn-in, and sampling MCMC phases, with MCMC chains run in sequence or in parallel. Posterior distributions are automatically summarized (with the ability to exclude some monitored nodes if desired) and functions are available to generate figures based on the posteriors (e.g., predictive check plots, traceplots). Function inputs, argument syntax, and output format are nearly identical to the 'R2WinBUGS'/'R2OpenBUGS' packages to allow easy switching between MCMC samplers. 
-License: GPL-2
+License: GPL-3
 URL: https://github.com/kenkellner/jagsUI
 NeedsCompilation: no
